--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-!**/src/test/resources/chromedriver
+/src/test/resources/chromedriver
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
